Added Dashboard Componenet Panel and building out UI Components

--- a/asset-dashboard-ui/src/app/features/home/home.component.html
+++ b/asset-dashboard-ui/src/app/features/home/home.component.html
@@ -1,5 +1,6 @@
 
 <div class="container">
   <app-tile id="assets" [color]="'#0f5b2a'" [title]="'View Assets'" [description]="'Assets Dashboard'" [buttonName]="'Open'" [urlPath]="'assets'"></app-tile>
+  <app-tile id="dashboard" [color]="'#0f5b2a'" [title] = "'View Dashboard'" [description]="'Executive Dashboard'" [buttonName] = "'View'" [urlPath] = "'dashboard'" ></app-tile>
 
 </div>
