add websocket service in assets UI, and make tests work

--- a/asset-dashboard-ui/src/app/shared/header/header.component.html
+++ b/asset-dashboard-ui/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" style="background-image: url(assets/images/top.jpg)">
+<div class="jumbotron" style="background-image: url(assets/images/banner2.png)">
   <h2 style="color:white">{{title}}</h2>
 </div>
 <div class="container">
