--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
@@ -2,27 +2,41 @@
 <div id ='top' class = 'wrapper' style= 'background-color:palegoldenrod'>
 
   <div id = 'map' class ='split'>
-    <div id ='PLACEHOLDER' style = 'width : 50px; height : 50px; background-color: lightblue'> Map</div>
-
+    <assetAnalysis id = '1' type = 'meter' version = '1' rotation = 50 current = 10 pressure = 5 flowRate = 12 temperature = 19> </assetAnalysis>
   </div>
 
   <div id = 'pumpSummary' class = 'split'>
    <div id = 'riskCategories' style = 'display:inline-block; width:500px' class = 'wrapper'>
-     <assetRisk id ='high' count = '3' riskName = 'High Risk' color = 'red' class = 'riskCategory'> </assetRisk>
-     <assetRisk id ='medium' count = '6' riskName = 'Medium Risk' color = 'yellow' class = 'riskCategory'> </assetRisk>
-     <assetRisk id ='low' count = '11' riskName = 'Low Risk' color = 'green' class = 'riskCategory'> </assetRisk>
+     <assetRisk id ='high' count = {{riskAnalysis.highRiskCount}} riskName = 'High Risk' color = 'red' class = 'riskCategory'> </assetRisk>
+     <assetRisk id ='medium' count = {{riskAnalysis.mediumRiskCount}} riskName = 'Medium Risk' color = 'yellow' class = 'riskCategory'> </assetRisk>
+     <assetRisk id ='low' count = {{riskAnalysis.lowRiskCount}} riskName = 'Low Risk' color = 'green' class = 'riskCategory'> </assetRisk>
     </div>
 
+    <table class="table table-striped table-condensed">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Type</th>
+          <th>Version</th>
+          <th>Pressure</th>
+          <th>Flow</th>
+          <th>Temperature</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="asset" *ngFor="let asset of assets;let i = index">
+           <td>{{asset.id}}</td>
+           <td>{{asset.type}}</td>
+           <td>{{asset.version}}</td>
+           <td>{{asset.pressure}}</td>
+           <td>{{asset.flowRate}}</td>
+          <td>{{asset.temperature}}</td>
+      </tbody>
+    </table>
+
    <div id ='pumpDetails'>
-     <div id ='PLACEHOLDER' style = 'width : 50px; height : 50px; background-color: lightblue'> Pump Details</div>
-<!--
-     <table>
-    <tr ng-repeat="x in assets">
-      <td>{{ x.id }}</td>
-      <td>{{ x.pressure }}</td>
-    </tr>
-  </table>
--->
+
+
     </div>
 
  </div>
