--- a/asset-dashboard-ui/src/app/shared/assetRisk/assetRisk.component.css
+++ b/asset-dashboard-ui/src/app/shared/assetRisk/assetRisk.component.css
@@ -10,7 +10,7 @@
 .circle {
   width : 40px;
   border-radius: 50%;
-  color: #fff;
+  color: darkgray;
   line-height: 40px;
   text-align: center;
   margin: auto
