--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.css
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.css
@@ -22,3 +22,19 @@ padding: 10px
   margin : 0;
   float: left
 }
+
+.dot {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 5px
+}
+
+.bottomsplit{
+  width:32%;
+  margin : 0;
+  float: left
+}
+
