--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
@@ -1,8 +1,17 @@
+<head>
+    <script src="/js/angular-leaflet-directive.min.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css">
+
+
+</head>
 
 <div id ='top' class = 'wrapper' style= 'background-color:palegoldenrod'>
 
   <div id = 'map' class ='split'>
-    <assetAnalysis id = '1' type = 'meter' version = '1' rotation = 50 current = 10 pressure = 5 flowRate = 12 temperature = 19> </assetAnalysis>
+      <div id = 'mapSummary' class = 'split'>
+        <leafletMap></leafletMap>
+        </div>
   </div>
 
   <div id = 'pumpSummary' class = 'split'>
@@ -12,9 +21,10 @@
      <assetRisk id ='low' count = {{riskAnalysis.lowRiskCount}} riskName = 'Low Risk' color = 'green' class = 'riskCategory'> </assetRisk>
     </div>
 
-    <table class="table table-striped table-condensed">
+    <table class="table table-striped table-condensed"  >
       <thead>
         <tr>
+          <th>Risk</th>
           <th>Id</th>
           <th>Type</th>
           <th>Version</th>
@@ -24,7 +34,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="asset" *ngFor="let asset of assets;let i = index">
+        <tr class="asset" *ngFor="let asset of assets;let i = index" (click) = tableClick(i)>
+          <span class="dot" [ngStyle] = "{'background-color':asset.riskColor}"></span>
            <td>{{asset.id}}</td>
            <td>{{asset.type}}</td>
            <td>{{asset.version}}</td>
@@ -49,13 +60,19 @@
 
 <div id = 'bottom' class = 'wrapper' style ='background-color: lightgreen'>
 
- <div id = 'mapSummary' class = 'split'>
-   <div id ='PLACEHOLDER' style = 'width : 50px; height : 50px; background-color: lightblue'> Map Summary</div>
- </div>
+  <div class = 'bottomsplit'>
+    <assetAnalysis id = {{selectedAssetAnalysis.id}} type = {{selectedAssetAnalysis.type}} version = {{selectedAssetAnalysis.version}} rotation = {{selectedAssetAnalysis.rotation}} current = {{selectedAssetAnalysis.current}} pressure = {{selectedAssetAnalysis.pressure}} flowRate = {{selectedAssetAnalysis.flowRate}} temperature = {{selectedAssetAnalysis.temperature}} riskColor = {{selectedAssetAnalysis.riskColor}}> </assetAnalysis>
+  </div>
 
- <div id = 'chartSummary' class = 'split'>
+  <div id = 'chartSelector' class = 'bottomsplit'>
+      <div id ='PLACEHOLDER' style = 'width : 50px; height : 50px; background-color: lightblue'> Chart Selector</div>
+
+  </div>
+
+ <div id = 'chartSummary' class = 'bottomsplit'>
    <div id ='PLACEHOLDER' style = 'width : 50px; height : 50px; background-color: lightblue'> Chart Summary</div>
-
  </div>
+
+ 
 
 </div>
