Work on popups on map

--- a/asset-dashboard-ui/src/app/shared/leafletMap/leafletMap.component.html
+++ b/asset-dashboard-ui/src/app/shared/leafletMap/leafletMap.component.html
@@ -1,4 +1,4 @@
 
              <div id="mapid"></div>
-       
+        <button onclick="function debug (){debugger}; debug();">Debug</button>
             
