CSS tweaks for the map

--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
@@ -55,21 +55,19 @@
 
 
 
-<div id = 'bottom' class = 'wrapper' style ='background-color: lightgreen'>
+<div id = 'bottom' style ='background-color: lightgreen'>
 
   <div class = 'bottomsplit'>
     <assetAnalysis id = {{selectedAssetAnalysis.id}} type = {{selectedAssetAnalysis.type}} version = {{selectedAssetAnalysis.version}} rotation = {{selectedAssetAnalysis.rotation}} current = {{selectedAssetAnalysis.current}} pressure = {{selectedAssetAnalysis.pressure}} flowRate = {{selectedAssetAnalysis.flowRate}} temperature = {{selectedAssetAnalysis.temperature}} riskColor = {{selectedAssetAnalysis.riskColor}} longitude = {{selectedAssetAnalysis.longitude}} latitude = {{selectedAssetAnalysis.latitude}} > </assetAnalysis>
   </div>
 
   <div id = 'chartSelector' class = 'bottomsplit'>
-      <div id ='PLACEHOLDER' style = 'width : 50px; height : 50px; background-color: lightblue'> Chart Selector</div>
+      <div id ='PLACEHOLDER' style = 'width : 100%; height : 40vh; background-color: lightblue'> Chart Selector</div>
 
   </div>
 
  <div id = 'chartSummary' class = 'bottomsplit'>
-   <div id ='PLACEHOLDER' style = 'width : 50px; height : 50px; background-color: lightblue'> Chart Summary</div>
+   <div id ='PLACEHOLDER' style = 'width : 100%; height : 40vh; background-color: lightblue'> Chart Summary</div>
  </div>
-
-
 
 </div>
