--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
@@ -62,8 +62,7 @@
   </div>
 
   <div id = 'chartSelector' class = 'bottomsplit'>
-      <div id ='PLACEHOLDER' style = 'width : 100%; height : 40vh; background-color: lightblue'> Chart Selector</div>
-
+    <chartSelector> </chartSelector>
   </div>
 
  <div id = 'chartSummary' class = 'bottomsplit'>
