--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
@@ -67,7 +67,9 @@
   </div>
 
  <div id = 'chartSummary' class = 'bottomsplit'>
-   <div id ='PLACEHOLDER' style = 'width : 100%; height : 40vh; background-color: lightblue'> Chart Summary</div>
+   <!--<div id ='PLACEHOLDER' style = 'width : 100%; height : 40vh; background-color: lightblue'> Chart Summary</div> -->
+   <canvas id="myChart" width="400" height="400"></canvas>
+
  </div>
 
 </div>
