--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
@@ -71,13 +71,21 @@
  <div id = 'chartSummary' class = 'bottomsplit' [ngStyle] = "{'text-align':'center', 'background':'lightgrey','box-shadow': '3px 3px 3px 3px'}">
     <div id ='PLACEHOLDER' style = 'width : 100%; height : 34vh'> 
     <h4 [ngStyle] = "{'border-bottom':'2px solid'}"> Chart Summary </h4>
-    <tr>Selected Pump: {{selectedAssetAnalysis.id}}</tr>
-    <tr>Select Date Range: </tr>
+    <div>Selected Pump: {{selectedAssetAnalysis.id}}</div>
+    <div>Select Date Range: </div>
     <input type="date" class="pumpDate" id = "min"><br>
-    <tr>To: </tr>
+    <div>To: </div>
     <input type="date" class="pumpDate" id = "max"><br>
-    <button class = "asset" (click)="filterData(selectedAssetAnalysis)">Plot</button>
+    <div> Select Attribute: </div>
+    <select id = "attrSelector">
+      <option value="temperature">Temperature</option>
+      <option value="pressure">Pressure</option>
+      <option value="flow">Flow</option>
+      <option value="current">Current</option>
+      <option value="rotation">Rotation</option>
+    </select>
     <br>
+    <button class = "asset" (click)="filterData(selectedAssetAnalysis)">Plot</button>
     <div id = "errorMessage" value = " "></div>
     </div> 
  </div>
