Made data bridge between table and dashboard
Added in data passing between the table component and the dashboard.

--- a/asset-dashboard-ui/src/app/features/dashboard-table/dashboard-table.component.css
+++ b/asset-dashboard-ui/src/app/features/dashboard-table/dashboard-table.component.css
@@ -7,3 +7,14 @@
     display: inline-block;
     margin-left: 5px
   }
+
+.mat-table {
+    padding: 1vh 2vh;
+    margin: auto;
+    display: table;
+}
+
+th.mat-header-cell {
+    
+    padding: 10px 15px;
+}
