--- a/asset-dashboard-ui/src/app/features/dashboard-table/dashboard-table.component.css
+++ b/asset-dashboard-ui/src/app/features/dashboard-table/dashboard-table.component.css
@@ -4,16 +4,33 @@
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
-    margin-left: 5px
+    margin: 1vh 0 -1vh 0;
   }
 
 .mat-table {
-    padding: 1vh 2vh;
-    margin: auto;
+/*    padding: 1vh 2vh;*/
+/*    margin: auto;*/
+    width: 100%;
     display: table;
 }
 
 th.mat-header-cell {
     
     padding: 10px 15px;
+}
+
+.dashboard-table {
+    max-height: 300px;
+    height: auto;
+    overflow: auto;
+    
+    border: 1px solid black;
+}
+
+td {
+    text-align: center;
+}
+
+td.mat-cell:first-of-type {
+    padding: 0px;
 }
