--- a/asset-dashboard-ui/src/app/shared/assetRisk/assetRisk.component.html
+++ b/asset-dashboard-ui/src/app/shared/assetRisk/assetRisk.component.html
@@ -1,7 +1,6 @@
 <div class='riskCategory'>
-     <h4 style ='text-align:center;'>{{riskName}}
-           <p class = 'circle' [ngStyle] = "{'background-color':color}">
-           {{count}}
-           </p>
-     </h4>
+    <h4 style ='text-align:center;'>{{riskName}}</h4>
+    <p class = 'circle' [ngStyle] = "{'background-color':color}">
+        {{count}}
+    </p>
 </div>
