--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.html
@@ -19,12 +19,12 @@
       </div>
       <div class="col-md-6">
         <div id = 'pumpSummary' class = 'split'>
-            <div id = 'riskCategories' style = 'width:500px'>
+            <div id = 'riskCategories' class="row">
                 <assetRisk id ='high' count = {{riskAnalysis.highRiskCount}} riskName = 'High Risk' color = 'red' class = 'riskCategory'> </assetRisk>
                 <assetRisk id ='medium' count = {{riskAnalysis.mediumRiskCount}} riskName = 'Medium Risk' color = 'yellow' class = 'riskCategory'> </assetRisk>
                 <assetRisk id ='low' count = {{riskAnalysis.lowRiskCount}} riskName = 'Low Risk' color = 'green' class = 'riskCategory'> </assetRisk>
             </div>
-            <dashboard-table (selectedAsset)="getSelectedAsset($event)" [dataSource]="uniqueAssets"></dashboard-table>
+            <dashboard-table class="row" (selectedAsset)="getSelectedAsset($event)" [dataSource]="uniqueAssets"></dashboard-table>
         </div>
       </div>
        <div id ='pumpDetails'>
