--- a/asset-dashboard-ui/src/app/features/dashboard-chart/dashboard-chart.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard-chart/dashboard-chart.component.html
@@ -1,12 +1,11 @@
-<div id = 'chartSelector' class = 'dashboard-chart'>
-    <canvas id="line-chart" width="800" height="600"></canvas>
-    <!-- <chartSelector> </chartSelector> -->
-  </div>
+<div id = 'chartSelector' class = 'col-md-8'>
+   <canvas id="line-chart" width="400" height="200"></canvas>
+</div>
 
- <div id = 'chartSummary' class = 'dashboard-chart' [ngStyle] = "{'text-align':'center', 'background':'lightgrey','box-shadow': '3px 3px 3px 3px'}">
-    <div id ='PLACEHOLDER' style = 'width : 100%; height : 34vh'> 
+<div id = 'chartSummary' class = 'col-md-4' [ngStyle] = "{'text-align':'center', 'background':'lightgrey','box-shadow': '3px 3px 3px 3px'}">
+    <div id ='PLACEHOLDER' style = 'width : 100%; height : 34vh'>
     <h4 [ngStyle] = "{'border-bottom':'2px solid'}"> Chart Summary </h4>
-    <div>Selected Pump: {{selectedAsset.id}}</div> 
+    <div>Selected Pump: {{selectedAsset.id}}</div>
     <div>Select Date Range: </div>
     <input type="date" class="pumpDate" id = "min"><br>
     <div>To: </div>
@@ -21,6 +20,4 @@
     </select>
     <br>
     <button class = "asset" (click)="filterData(selectedAsset)">Plot</button>
-    <div id = "errorMessage" value = " "></div>
-    </div> 
  </div>
