--- a/asset-dashboard-ui/src/app/features/dashboard-chart/dashboard-chart.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard-chart/dashboard-chart.component.html
@@ -2,8 +2,7 @@
    <canvas id="line-chart" width="400" height="200"></canvas>
 </div>
 
-<div id = 'chartSummary' class = 'col-md-4' [ngStyle] = "{'text-align':'center', 'background':'lightgrey','box-shadow': '3px 3px 3px 3px'}">
-    <div id ='PLACEHOLDER' style = 'width : 100%; height : 34vh'>
+<div id = 'chartSummary' class = 'col-md-4'>
     <h4 [ngStyle] = "{'border-bottom':'2px solid'}"> Chart Summary </h4>
     <div>Selected Pump: {{selectedAsset.id}}</div>
     <div>Select Date Range: </div>
