--- a/asset-dashboard-ui/src/app/features/dashboard-table/dashboard-table.component.css
+++ b/asset-dashboard-ui/src/app/features/dashboard-table/dashboard-table.component.css
@@ -15,7 +15,7 @@
 }
 
 th.mat-header-cell {
-    
+
     padding: 10px 15px;
 }
 
@@ -23,8 +23,8 @@ th.mat-header-cell {
     max-height: 300px;
     height: auto;
     overflow: auto;
-    
-    border: 1px solid black;
+
+    /*border: 1px solid black;*/
 }
 
 td {
