--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.css
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.css
@@ -14,14 +14,25 @@ padding: 10px
     margin: auto;
 }
 
+#mapSummary {
+   margin-top: 20px;
+   margin-bottom: 20px;
+}
+
+#pumpSummary {
+   margin-top: 20px;
+   margin-bottom: 20px;
+   padding-left: 10px;
+   padding-right: 10px;
+   border: 2px solid;
+   height: 50vh;
+   max-height: 450px;
+}
+
 .summary{
   width:50%;
   margin : 0;
   float: left
-}
-
-.split{
-  margin : 20px;
 }
 
 .dot {
