--- a/asset-dashboard-ui/src/app/shared/leafletMap/leafletMap.component.css
+++ b/asset-dashboard-ui/src/app/shared/leafletMap/leafletMap.component.css
@@ -1,3 +1,6 @@
-#mapid { width: 100%;
-        height: 50vh;
-        box-shadow: 1px 1px 1px 1px }
+#mapid {
+   width: 100%;
+   height: 50vh;
+   max-height: 450px;
+   border: 2px solid;
+}
