--- a/asset-dashboard-ui/src/app/features/dashboard-chart/dashboard-chart.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard-chart/dashboard-chart.component.html
@@ -5,27 +5,29 @@
 <div id = 'chartSummary' class = 'col-md-4' [ngStyle] = "{'text-align':'center', 'background':'lightgrey','box-shadow': '3px 3px 3px 3px'}">
     <div id ='PLACEHOLDER' style = 'width : 100%; height : 34vh'>
     <h4 [ngStyle] = "{'border-bottom':'2px solid'}"> Chart Summary </h4>
-    <div>Selected Pump: {{selectedAsset.id}}</div>
-    <div>Select Date Range: </div>
-    <input type="date" class="pumpDate" id = "min"><br>
+    <div>Pump Selected: <b> {{selectedAsset.id}} </b></div>
+    <!--<input type="date" class="pumpDate" id = "min"><br>
     <div>To: </div>
-    <input type="date" class="pumpDate" id = "max"><br>
-    <br>
-   <!-- <div> Select Attribute: </div> -->
-    <!--<select id = "attrSelector">
-      <option value="temperature">Temperature</option>
-      <option value="pressure">Pressure</option>
-      <option value="flow">Flow</option>
-      <option value="current">Current</option>
-      <option value="rotation">Rotation</option>
-    </select> -->
+    <input type="date" class="pumpDate" id = "max"><br> -->
     <mat-form-field>
-      <mat-select placeholder="Select Attribute" [(value)]="selectedAttribute" >
+      <input matInput [matDatepicker]="picker1" placeholder="Start date" [formControl]="startDate">
+      <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+      <mat-datepicker #picker1></mat-datepicker>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker2" placeholder="End date" [formControl]="endDate">
+      <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+      <mat-datepicker #picker2></mat-datepicker>
+    </mat-form-field>
+
+    <br>
+    <mat-form-field>
+      <mat-select placeholder="temperature" [(value)]="selectedAttribute" >
         <mat-option *ngFor="let attribute of attributes" [value] = "attribute.value">
           {{attribute.viewValue}}
         </mat-option>
       </mat-select>
     </mat-form-field>
     <br>
-    <button class = "asset" (click)="filterData(selectedAsset)">Plot</button>
+    <button mat-raised-button (click)="filterData(selectedAsset)">Plot</button>
  </div>
