Added Basic Sorting for Table
Added in functionality to sort the table based on several values. Only risk isn't sortable, as there is no value for it to sort right now. Could add in the ability later on.

Also fixed height issues on the containers of the map and table conatiners.

--- a/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.css
+++ b/asset-dashboard-ui/src/app/features/dashboard/dashboard.component.css
@@ -25,8 +25,8 @@ padding: 10px
    padding-left: 10px;
    padding-right: 10px;
    border: 2px solid;
-   height: 50vh;
-   max-height: 450px;
+   height: 30em;
+   max-height: 30em;
 }
 
 .summary{
