Fixed Selected Asset
Error when clicking on selected asset. Broke when creating the sorting of the table. Now works.

--- a/asset-dashboard-ui/src/app/features/dashboard-table/dashboard-table.component.html
+++ b/asset-dashboard-ui/src/app/features/dashboard-table/dashboard-table.component.html
@@ -30,7 +30,7 @@
         </ng-container>
         
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row;let i = index  columns: displayedColumns;" (click) = tableClick(i);></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click) = tableClick(row);></tr>
     
     </table>
 </div>
